ensure textarea isn't squished

--- a/web/static/sillypaste/style.css
+++ b/web/static/sillypaste/style.css
@@ -27,7 +27,10 @@
     }
 }
 
-textarea { resize: none; }
+textarea {
+    resize: none;
+    min-height: 7.5rem;
+}
 
 pre { overflow-x: auto; }
 
